test/error/ImportSame.mod
MODULE ImportSame;

  IMPORT Out := log, out := log;

  CONST

  TYPE

  VAR

END ImportSame.
